--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.5.0",
     "joi-browser": "^13.4.0",
     "jquery": "^3.5.1",
+    "jwt-decode": "^2.2.0",
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
