--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "joi-browser": "^13.4.0",
     "jquery": "^3.5.1",
     "jwt-decode": "^2.2.0",
+    "moment": "^2.27.0",
     "path": "^0.12.7",
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
