added homepage definition for deployment

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "swapyourstuffclient",
+  "homepage": "http://swapyourstuffs.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
